--- a/ShoppingCartExample/ShoppingCartExample.csproj
+++ b/ShoppingCartExample/ShoppingCartExample.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Temporalio.Extensions.Hosting" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
